# argus-stream-engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMAKE.txt  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  Makefile.ps1  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  main.vcxproj  main.vcxproj.filters  opencv_p1.sln  pipeline.h
docs/: overview.md
main.dir/Debug/main.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  main.lastbuildstate
